2011-12-21  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13439]
	* iconv/gconv.h: Define __GCONV_SWAP.
	* iconvdata/unicode.c: The swap bit must be stored in __flags.
	* iconvdata/utf-16.c: Likewise.
	* iconvdata/utf-32.c: Likewise.

2011-12-21  Andreas Schwab  <schwab@linux-m68k.org>

	[BZ #13524]
	* stdlib/strtod_l.c (____STRTOF_INTERNAL): Clear lowest limb of
	numerator after shifting it by one limb.

2011-12-19  Rafael Ávila de Espíndola  <rafael.espindola@gmail.com>

	* sysdeps/x86_64/fpu/bits/fenv.h (feraiseexcept): Define it only
	under [__USE_EXTERN_INLINES].

2011-12-17  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13446]
	* stdio-common/vfprintf.c (vfprintf): Fix extension of specs array.

2011-11-22  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/Makefile: Added locale-defines.sym generation.
	* sysdeps/powerpc/locale-defines.sym: Locale definitions for strcasecmp
	optimized code.
	* sysdeps/powerpc/powerpc32/power7/Makefile: New file.
	* sysdeps/powerpc/powerpc32/power7/strcasecmp.S: New file.
	* sysdeps/powerpc/powerpc32/power7/strcasecmp_l.S: New file.
	* sysdeps/powerpc/powerpc64/power7/Makefile: Added unroll-loop option
	for strncasecmp/strncasecmp_l compilation.
	* sysdeps/powerpc/powerpc64/power7/strcasecmp.S: New file.
	* sysdeps/powerpc/powerpc64/power7/strcasecmp_l.S: New file.

2011-12-08  Marek Polacek  <mpolacek@redhat.com>

	[BZ #13484]
	* math/bits/math-finite.h: Use __REDIRECT_NTH and __NTH instead
	of __asm__.

2011-12-17  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13506]
	* time/tzfile.c (__tzfile_read): Check values from file header.

2011-11-21  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* powerpc/powerpc32/sysdep.h: Define SETUP_GOT_ACCESS() macro.
	* powerpc/powerpc32/a2/memcpy.S: Use SETUP_GOT_ACCESS() macro.
	* powerpc/powerpc32/dl-start.S: Likewise.
	* powerpc/powerpc32/elf/start.S: Likewise.
	* powerpc/powerpc32/fpu/__longjmp-common.S: Likewise.
	* powerpc/powerpc32/fpu/s_ceil.S: Likewise.